--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "souky-dynamic-form",
-  "version": "0.1.0",
+  "name": "souky-vue-el-compoments",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name souky-compoments --dest lib ./packages/index.js"
   },
+  "main": "lib/souky-compoments.umd.min.js",
+  "license": "MIT",
+
+  "keywords": [
+    "vue",
+    "element",
+    "souky",
+    "compoments"
+  ],
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/souky/souky-vue-el-compoments.git"
+  },
+
   "dependencies": {
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
@@ -21,7 +37,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6"
   },
   "eslintConfig": {
     "root": true,
