--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "souky-vue-el-compoments",
-  "version": "1.0.0",
+  "name": "souky-compoments",
+  "version": "0.0.1",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,23 +10,20 @@
   },
   "main": "lib/souky-compoments.umd.min.js",
   "license": "MIT",
-
   "keywords": [
     "vue",
     "element",
     "souky",
     "compoments"
   ],
-
   "repository": {
     "type": "git",
     "url": "https://github.com/souky/souky-vue-el-compoments.git"
   },
-
   "dependencies": {
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
-    "vue": "^2.6.10"
+    "vue": "^2.5.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
