--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name souky-compoments --dest lib ./packages/index.js"
+    "lib": "vue-cli-service build --target lib --name souky-compoments --dest lib ./src/packages/index.js"
   },
   "main": "lib/souky-compoments.umd.min.js",
   "license": "MIT",
