--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "souky-compoments",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "lib": "vue-cli-service build --target lib --name souky-compoments --dest lib ./src/packages/index.js"
   },
   "main": "lib/souky-compoments.umd.min.js",
@@ -23,34 +22,18 @@
   "dependencies": {
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "browserslist": [
     "> 1%",
